--- a/index.html
+++ b/index.html
@@ -7,51 +7,57 @@
   <!-- We need this line below for responsiveness! -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/style.css">
+  <link href="https://fonts.googleapis.com/css?family=Sacramento&display=swap" rel="stylesheet">
 </head>
 <body>
 
   <!-- code a Hero / Banner section -->
-  <div class="banner">
+  <div class="banner" style="background-image: url(images/berlin.jpg)">
     <div class="container">
       <div>
-        <h1>Le Wagon brings tech skills to creative people!</h1>
-        <p>Change your life and learn to code at one of our campuses around the world.</p>
-        <a href="button.css" class="btn-treehouse">Apply now!</a>
+        <h1>The ultimate Lifestyle Blog</h1>
+        <p>Explore everything about Travel, Food and Yoga in Israel.</p>
+        <a href="mailto:MarieHeller@hotmail.de" class="btn-treehouse">Contact Me!</a>
       </div>
     </div>
   </div>
 
   <!-- code a "How it works" section -->
-  <div class="container">
-    <h2 class="text-center">How it works</h2>
+  <div class="content">
+    <div class="container">
+    <h2 class="text-center">Explore</h2>
 
     <div class="cards">
       <div class="card">
-        <img src="images/apply.svg" alt="Apply icon">
-        <h3>Apply</h3>
-        <p>Select your city and submit your application.</p>
+        <img src="images/food.jpg" alt="Citrus">
+        <h3>Food</h3>
+        <p>Life is too short to eat bad</p>
       </div>
 
       <div class="card">
-        <img src="images/learn.svg" alt="Apply icon">
-        <h3>Learn to code</h3>
-        <p>Join daily lectures, take up challenges and have fun. That's all it takes!</p>
+        <img src="images/travel.jpg" alt="Van in the desert">
+        <h3>Travel</h3>
+        <p>Travel is the only thing to buy that makes you richer</p>
       </div>
 
       <div class="card">
-        <img src="images/product.svg" alt="Apply icon">
-        <h3>Build products</h3>
-        <p>Bring your creativity alife and build unique products.</p>
+        <img src="images/Yoga.jpg" alt="Apply icon">
+        <h3>Yoga</h3>
+        <p>Balance mind and body</p>
       </div>
+    </div>
     </div>
   </div>
 
   <!-- code a footer -->
   <div class= "footer">
+    <div class="container">
+      <h2>Follow Me!</h2>
     <div class="footer-links">
       <a href="https://www.linkedin.com/in/marie-christine-heller-a03405104" target="_blank" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
       <a href="https://github.com/MarieHeller" target="_blank" class="social-icon"><i class="fab fa-github"></i></a>
       <a href="#" target="_blank" class="social-icon"><i class="fab fa-instagram"></i></a>
+    </div>
     </div>
   </div>
 
